@@ -362,10 +362,11 @@ int netcfg_get_interface(struct debconfclient *client, char **interface,
 {
     char *inter = NULL, **ifs;
     size_t len;
-    int ret, i;
+    int ret, i, asked;
     int num_interfaces = 0;
     char *ptr = NULL;
     char *ifdsc = NULL;
+    char *old_selection = NULL;
 
     if (*interface) {
         free(*interface);
@@ -380,6 +381,15 @@ int netcfg_get_interface(struct debconfclient *client, char **interface,
 
     num_interfaces = get_all_ifs(1, &ifs);
 
+    /* If no default was provided, use the first in the list of interfaces. */
+    if (! defif && num_interfaces > 0) {
+        defif=ifs[0];
+    }
+
+    /* Remember old interface selection, in case it's preseeded. */
+    debconf_get(client, "netcfg/choose_interface");
+    old_selection = strdup(client->value);
+    
     for (i = 0; i < num_interfaces; i++)
     {
 	size_t newchars;
@@ -400,7 +410,7 @@ int netcfg_get_interface(struct debconfclient *client, char **interface,
 	
         snprintf(temp, newchars, "%s: %s", inter, ifdsc);
 
-	if (num_interfaces > 1 && defif != NULL && !strcmp(defif, inter))
+	if (num_interfaces > 1 && strcmp(defif, inter) == 0)
 		debconf_set(client, "netcfg/choose_interface", temp);
 
 	di_snprintfcat(ptr, len, "%s, ", temp);
@@ -414,6 +424,7 @@ int netcfg_get_interface(struct debconfclient *client, char **interface,
         debconf_input(client, "high", "netcfg/no_interfaces");
         debconf_go(client);
         free(ptr);
+	free(old_selection);
         *numif = 0;
         return 0;
     }
@@ -431,17 +442,24 @@ int netcfg_get_interface(struct debconfclient *client, char **interface,
         debconf_subst(client, "netcfg/choose_interface", "ifchoices", ptr);
         free(ptr);
 
-        debconf_input(client, "critical", "netcfg/choose_interface");
+ 	asked = (debconf_input(client, "critical", "netcfg/choose_interface") == 0);
         ret = debconf_go(client);
 
-        if (ret)
+        /* If the question is not asked, honor preseeded interface name.
+	 * However, if it was preseeded to "auto", or there was no old value,
+	 * leave it set to defif. */
+        if (!asked && strlen(old_selection) && strcmp(old_selection, "auto") != 0) {
+	    debconf_set(client, "netcfg/choose_interface", old_selection);
+	}
+        
+	free(old_selection);
+	
+	if (ret)
           return ret;
-
+	
         debconf_get(client, "netcfg/choose_interface");
         inter = client->value;
 
-        if (ret)
-            return ret;
         if (!inter)
             netcfg_die(client);
     }
